  - updated to SwingX 1.6.1 (DatePicker improvements)
  
 ExerciseViewer changes:
  - Garmin FIT Parser (support for Garmin FIT activity files):
    - full support for all data which can be shown in ExerciseViewer
      (summary, lap data, sample data, track/map data, temperature data)
    - unit tests for GarminFITParser
  - ConvertUtils: new conversion method from semicircles to degrees
  - TrackPanel: start and end trackpoints (circles) have a white border,
    so they are also visible on backgrounds with same color
  
v5.0.0:
 General changes:
  - CHANGE TO MAVEN BUILD SYSTEM (not Ant-based anymore)
    - Maven multi project: split into modules for strict separation,
      wrong module dependencies are not possible anymore
    - Current Maven modules:
      - sportstracker:
        Main application component.
      - st-exerciseviewer: 
        Component for parsing and displaying HRM exercise files (was named
        PolarViewer before, but support now many other devices too)
      - st-util:
        Component with common util classes for calculation, UI and more
      - st-parent:
        Parent component with common plugin configuration and dependencies
    - Dependency Jars are not part of the source archive anymore, they
      will be downloaded automatically in the build process
    - Setup of a Maven repository at http://saring.de/st-maven-repo/ for BSAF
      and current JFreeChart (they are missing in Maven central repository)
    - GMaven plugin in build process:
      - Groovy classes can be used in all modules, also for tests
      - Groovy classes are now stored in own groovy source directories
      - Groovy and Java code can have circular dependencies
      - Groovy tests are executed automatically in test phase
        (AllGroovyTest wrapper class not needed anymore)
    - documentation of Maven usage in README.txt
  - CHANGE TO MERCURIAL DISTRIBUTED VERSION CONTROL SYSTEM
    - the initial Mercurial repository contains the latest SVN trunk 